Fixed missing navigation on tablet

--- a/public/_tpl/bootstrap3/css/main.less
+++ b/public/_tpl/bootstrap3/css/main.less
@@ -57,7 +57,7 @@
 #nav {
     margin: 20px 0;
 
-    @media (max-width: @screen-sm-max) {
+    @media (max-width: @screen-xs-max) {
         display: none;
     }
 }
